--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+
+@import "./css/Hero.css";
+@import "./css/Features.css";
+@import "./css/About.css";
+
+
 :root {
   --main-title-color: #01005B; 
 }
@@ -38,10 +44,10 @@ h2 {
 
 .header {
   background: #f9f0e5;
-  padding: "20px";
+  padding: 12px 0;
 }
 
-.logo {
+.logo-wrapper {
   width: 200px;
   height: 35px;
   margin-bottom: 60px;
@@ -60,168 +66,39 @@ button:hover {
 .button-primary img {
   margin-left: 16px;
 }
-
-.hero-list {
-  padding-bottom: 40px;
-}
-
-.hero-list img{
-  margin-right: 10px;
-} 
-
-.hero-list li {
-  margin-top: 15px;
-  font-size: 15px;
-  color: #676869;
-}
-
-.img-fluid {
-  margin-top: 100px;
-}
-
-.review {
-  margin-top: 20px;
-  background: #ffffff;
-  padding: 15px;
-  border-radius: 8px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
-  color: #777;
-}
-
-/* .features-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  max-width: 1200px;
-  margin: 0 auto;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
-.features-text {
-  flex: 1;
-  min-width: 280px;
-  text-align: left;
-  padding: 20px;
-} */
-
-/* .features-text h3 {
-  color: #34495e;
-  margin: 20px 0 10px;
-  font-weight: bold;
-}
-
-.features-text p {
-  color: #7f8c8d;
-  line-height: 1.8;
-}
-
-.features-image {
-  flex: 1;
-  min-width: 280px;
-  overflow: hidden;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.features-image img {
+.image {
   width: 100%;
-  display: block;
-  transition: transform 0.3s ease;
 }
 
-.features-image img:hover {
-  transform: scale(1.05);
+
+
+@media (max-width: 800px) {
+  .header span:not(.shipping) {
+    display: none; 
 }
 
-/*  */
-
-.features-image__wrapper p {
-  margin-top: 10px;
-  color: #95a5a6;
+.image__wrapper {
+margin-top: 30px;
+padding: 0 1x;
 }
 
-.features-section {
-  background: #ffffff;
-  padding: 70px 20px;
-  text-align: center;
-}
-.features-image {
-width: 433px;
-height: 655px;
-}
-
-.features-list {
-  margin-top: 85px;
-}
-.features-img {
-  width: 42px;
-}
-.features-descriptions__heading {
-  color: var(--main-title-color);
-  margin-left: 40px;
-}
-.features-descriptions{
-  margin-left: 80px;
-  font-size: 15px;
-  color: #6C6C6C;
-  text-align: start;
-}
-.about-section {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 60px 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-  gap: 30px;
-  background: #f9f9f9;
-}
-
-.about-image {
-  flex: 1;
-  min-width: 280px;
-  overflow: hidden;
-  border-radius: 12px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.about-image img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.about-content {
-  flex: 1;
-  min-width: 280px;
-  text-align: left;
-}
-
-.about-content h1 {
-  font-size: 2em;
-  color: #333;
+ .logo-wrapper {
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 20px;
+ }
+
+ h1 {
+  text-align: center;
+  font-size: 34px;
+  padding-bottom: 0;
+ }
+ h2 {
+  font-size: 26px;
+  text-align:  center;
+}
+ .button-primary {
+  width: 100%;
+ }
 }
 
-.about-content p {
-  color: #555;
-  line-height: 1.8;
-  margin-bottom: 10px;
-}
-
-button {
-  margin-top: 20px;
-  padding: 12px 25px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 1em;
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
